@@ -18,3 +18,4 @@ Matsuu Takuto <matsuu@gentoo.org>
 Joshua Kinard <kumba@gentoo.org>
 Lars Weiler <pylon@gentoo.org>
 Andrew Gaffney <agaffney@gentoo.org>
+Diego Pettenò <flameeyes@gentoo.org>
